Fixed bug: Glitches in Flash occur because of overflow parameter changes.
git-svn-id: svn://svn.totalactivemedia.nl/beeldgeluid@18932 a5e0a7a9-93bf-8f48-8ca9-7e8460674ce7

--- a/sites/all/themes/beeldgeluid/css/dossier.css
+++ b/sites/all/themes/beeldgeluid/css/dossier.css
@@ -19,9 +19,16 @@
 
 /* Override some properties that have been set as inline styles. Sorry for the !important. */
 .dossier-element-focus {
-  overflow: visible!important;
   width: auto!important;
   z-index: 1000;
+}
+
+.dossier-element .content {
+  display: none;
+}
+
+.dossier-element-focus .content {
+  display: block;
 }
 
 .vjs-controls {
